apps/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: playground
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: containous
    task: whoami
