apps/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whoami
  namespace: playground
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: robert-jan.me
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami
          servicePort: 80
